# sas-catering-management

./: .env  .env.example  .gitignore  ACCOUNTING_MODULE_IMPLEMENTATION_SUMMARY.md  ACCOUNTING_MODULE_README.md  ACCOUNTING_README.md  ADD_EVENT_PROFITABILITY_MODELS.txt  ADMIN_PANEL_IMPLEMENTATION.md  AI_SUITE_IMPLEMENTATION_SUMMARY.md  BAKERY_DEPARTMENT_SETUP_COMPLETE.md  BAKERY_MODULE_FIXES_SUMMARY.md  BI_MODULE_COMPLETE_SUMMARY.md  BI_MODULE_IMPLEMENTATION_SUMMARY.md  CHECKLIST_MODULE_IMPLEMENTATION_SUMMARY.md  COMMUNICATION_HUB_IMPLEMENTATION_SUMMARY.md  Dockerfile  EMPLOYEE_UNIVERSITY_IMPLEMENTATION_STATUS.md  ENTERPRISE_MODULES_DELIVERABLES.json  ENTERPRISE_MODULES_IMPLEMENTATION_REPORT.md  EQUIPMENT_MAINTENANCE_IMPLEMENTATION.md  EVENTS_UI_IMPROVEMENTS_SUMMARY.md  FINAL_IMPLEMENTATION_CHECKLIST.md  FIXES_APPLIED.md  FIXES_COMPLETE_SUMMARY.md  FLASK_APP_STRUCTURE.md  FLOOR_PLANNER_ERROR_FIX.md  GRANT_ADMIN_ACCESS.md  HIRE_ORDER_FIX_SUMMARY.md  HR_IMPLEMENTATION_SUMMARY.md  HR_MODULE_README.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_VERIFICATION.md  INTEGRATIONS_ERRORS_FIXED.md  INTEGRATIONS_IMPLEMENTATION_SUMMARY.md  LICENSE  MENUPACKAGE_FIX_SUMMARY.md  MODELS_RECONSTRUCTION_REPORT.md  MODULE_ACCESS_GUIDE.md  POS_ERROR_FIX_SUMMARY.md  PREMIUM_MODULES_COMPLETE_SUMMARY.md  (+187 more)
android_app/: build_apk_complete.ps1  build_apk_original.ps1
installer/: SAS_Installer.iss
instance/: sas.db  site.db
models/: ai_models.py
modules/: catering_menu.py
sas_management/: __main__.py  app.py  config.py  models.py  requirements_gemini.txt  routes.py  sas.db  (+1 more)
(+569 files in other folders)
